# dusty-faucet

./: .gitignore  README.md
.github/workflows/: contract-pr-checks.yml  discord-pr-checks.yml  upload-contract.yml
app/: README.md  jest.config.ts  package.json  tsconfig.json
app/src/: app.ts  index.ts
app/src/commands/: drip.js  drip.ts  help.js
app/src/helpers/: command.d.ts  discord.d.ts  index.ts  messageHandler.ts  metadata.json  sendTokens.ts
app/tests/: messageHandler.test.js  messageHandler.test.js.map  messageHandler.test.ts  sample.test.js.map
contract/: Cargo.toml  README.md  lib.rs
contract/src/: lib.rs
contract/tests/: other_tests.rs  test_utils.rs  transfer_tests.rs
src/commands/: drip.js
src/helpers/: connectApi.ts  index.ts
