[package]
name = "plasm_faucet"
version = "3.0.0-rc2"
authors = ["Kentaro Vadney <kentaro@stake.co.jp>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

#standard rust
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"
ink_prelude = { version = "3.0.0-rc2", default-features = false }

[lib]
name = "plasm_faucet"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
